tests/ui/impl_unknown_type.jet
impl Missing {
    fn f() {}
}

fn main() {}
